# black-box

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
.woodpecker/: test.yml
black-box/: Cargo.toml
black-box-factory/: Cargo.toml
black-box-factory/src/: factory.rs  factory_set.rs  lib.rs  resource.rs
black-box-factory/src/factory/: mod.rs  set.rs
black-box-factory/src/overseer/: messages.rs  mod.rs  set.rs
black-box/src/: error.rs  executor.rs  futures.rs  lib.rs  message.rs
black-box/src/futures/: race.rs
examples/: create_actor.rs
src/: error.rs  executor.rs  futures.rs  lib.rs  message.rs
src/actors/: mod.rs
