[package]
name = "black-box"
version = "0.2.0"
edition = "2021"
authors = ["Caleb Leinz <cmleinz@pm.me>"]
description = "A minimal actor framework"
readme = "README.md"
repository = "https://github.com/cmleinz/black-box"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[dependencies]
async-channel = { version = "2.3.1" }
futures-lite = { version = "2.3.0"}

[dev-dependencies]
async-executor = { version = "1.13.1" }
